// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPanel should render correctly 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-panel--padded"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </section>
</DocumentFragment>
`;

exports[`BpkPanel should render with className attribute 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-panel--padded custom-class"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </section>
</DocumentFragment>
`;

exports[`BpkPanel should render with fullWidth attribute 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel bpk-panel--padded bpk-panel--full-width"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </section>
</DocumentFragment>
`;

exports[`BpkPanel should render with padded attribute 1`] = `
<DocumentFragment>
  <section
    class="bpk-panel"
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </section>
</DocumentFragment>
`;
